# trading_lab

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  app.py  docker-compose.yml  pyproject.toml
.gitea/workflows/: deploy.yaml
.streamlit/: config.toml
lib/: __init__.py  backtester.py  charts.py  config.py  data_fetcher.py  indicators.py  options_pricing.py  orders.py  performance.py  persistence.py  scanner.py  state.py  styles.py  trading_engine.py
pages/: 1_⚡_Trading.py  2_📈_Analysis.py  3_🔄_Backtester.py  4_🔍_Scanner.py  5_⚙️_Settings.py
